# LIOP

./: .dockerignore  .gitattributes  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  MANIFESTO.md  README.md  audit_parity_report.md  cargo_errors.txt  liop-metadata.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  socket.yml
.github/workflows/: ci.yml  codeql.yml
docs/: docs.json
docs/concepts/: architecture.mdx  client-concepts.mdx  logic-on-origin.mdx  manifesto.mdx  server-concepts.mdx  specification.mdx  wasi-sandboxing.mdx  zero-trust.mdx
docs/es/concepts/: architecture.mdx  client-concepts.mdx  logic-on-origin.mdx  manifesto.mdx  server-concepts.mdx  specification.mdx  wasi-sandboxing.mdx  zero-trust.mdx
docs/es/getting-started/: intro.mdx  quickstart.mdx
docs/getting-started/: intro.mdx  quickstart.mdx
docs/mesh-node/: compilation.mdx  overview.mdx
docs/typescript-sdk/: agent.mdx  client.mdx  economy.mdx  gateway.mdx  overview.mdx  security.mdx  server.mdx
examples/demos/: package.json
protocol/: SPECIFICATION.md
protocol/proto/: liop_core.proto
scripts/: sanitize-changelog.js
sdks/rust/: README.md
sdks/rust/crates/client/: Cargo.toml
sdks/rust/crates/client/src/: injector.rs  main.rs  p2p.rs
sdks/typescript/: README.md  bank-identity.json  biome.json  client-id.json  nexus-identity.json  oracle-identity.json  out.txt  out2.json  package.json  socket.yml  source-id.json  test-cid.ts  test-dht.ts  test-find.ts  test-router.ts  tsconfig.build.json  tsconfig.json  tsup.config.ts  vault-identity.json  vitest.config.ts
servers/liop-node/: Cargo.toml  README.md  config.toml
servers/liop-node/src/: config.rs  executor.rs  grpc.rs  guardian.rs  health.rs  main.rs  p2p.rs  tee.rs  zk.rs
servers/mesh-node/: Cargo.toml  README.md
tools/liop-cli/: Cargo.toml
tools/liop-cli/src/: main.rs
tools/nmp-cli/: Cargo.toml
(+222 files in other folders)
