[package]
name = "liop-node"
version = "0.1.0"
edition = "2021"

[dependencies]
liop-core = { path = "../../sdks/rust/crates/core" }

# gRPC y Async
tonic = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util"] }

# Logic-on-Origin Sandbox
wasmtime = "29"
wasmtime-wasi = "29"

# Networking P2P
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "kad", "macros", "tokio", "quic"] }
futures = "0.3"
tokio-stream = "0.1"
wasmparser = "0.225"
anyhow = "1"
pqcrypto-kyber = "0.8"
aes-gcm = "0.10"
rand = "0.8"
pqcrypto-traits = "0.3"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
toml = "0.8"

[dev-dependencies]
wasm-encoder = "0.225"
