[package]
name = "nmp-client"
version = "0.1.0"
edition = "2021"

[dependencies]
nmp-core = { path = "../core" }

# gRPC y Async
tonic = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Networking P2P
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "kad", "macros", "tokio", "quic"] }
futures = "0.3"
pqcrypto-kyber = "0.8"
aes-gcm = "0.10"
rand = "0.8"
pqcrypto-traits = "0.3"
tracing = "0.1"

